# tomli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: push.yml  release.yml
src/: copy.rs  delete.rs  errors.rs  main.rs  parser.rs  query.rs  set.rs
tests/: copy.rs  delete.rs  general.rs  query.rs  set.rs
tests/common/: mod.rs
tests/files/: invalid.toml  valid.toml
