[package]
name = "tomli"
version = "0.3.0"
description = "A simple CLI for quering and editing TOML files"
authors = ["blinxen <h-k-81@hotmail.com>"]
repository = "https://github.com/blinxen/tomli"
readme = "README.md"
license = "MIT"
edition = "2021"

include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[[bin]]
name = "tomli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"
